# AgendaMind

./: .gitignore  Dockerfile  config.example.yaml  config.yaml  direktory.fish  main.py  pyproject.toml  run.fish  setup_dc.fish
core/: __init__.py  config.py  event_bus.py
features/document_controller/: manager.py
features/executive_secretary/: scheduler.py
interfaces/: __init__.py
interfaces/calendar_adapter/: __init__.py  adaptor.py  alert_system.py
interfaces/obsidian_hub/: reader.py
interfaces/telegram_node/: __init__.py  bot.py  webhook.py
prompts/: SOP_Document_Controller.md  SOP_Sekretaris.md  prioritas_jadwal.md
